--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </li>
         </ul>
       </nav>
+      <p class="rec">REC</p>
       <h1 class="header__title">no focus</h1>
       <p class="header__text title-decor">Что делать, когда не можешь делать ничего<br>
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
