--- a/index.html
+++ b/index.html
@@ -47,6 +47,62 @@
       <p class="header__text title-decor">Что делать, когда не можешь делать ничего<br>
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
     </header>
+    <main class="content">
+      <section class="content__section why-hard-concentrate">
+        <h2 class="why-hard-concentrate__title">Почему сосредоточиться так сложно</h2>
+        <article class="card why-hard-concentrate__card">
+          <p class="card__title title-decor">
+            Многозадачность
+          </p>
+          <p class="card__text">
+            Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+          </p>
+        </article>
+        <article class="card why-hard-concentrate__card">
+          <p class="card__title title-decor">
+            Дофамин
+          </p>
+          <p class="card__text">
+            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
+          </p>
+        </article>
+      </section>
+      <section class="content__section fall-concentrate">
+        <h2 class="fall-concentrate__title">
+          Что снижает концентрацию внимания?
+        </h2>
+        <article class="card">
+          <p class="card__title title-decor">
+            Многозадачность
+          </p>
+          <p class="card__text">
+            Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
+          </p>
+        </article>
+        <article class="card">
+          <p class="card__title title-decor">
+            Еда
+          </p>
+          <p class="card__text">
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
+          </p>
+        </article>
+        <article class="card">
+          <p class="card__title title-decor">
+            Гаджеты
+          </p>
+          <p class="card__text">
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
+          </p>
+        </article>
+      </section>
+      <section class="content__section how-concentrate">
+        
+      </section>
+      <section class="content__section grid-gallery">
+        
+      </section>
+    </main>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
