доделал мэйн контент

--- a/index.html
+++ b/index.html
@@ -145,7 +145,24 @@
         </article>
       </section>
       <section class="content__section grid-gallery">
-        
+        <p class="card__title title-decor grid-gallery__subtitle">
+          А можно в картинках?
+        </p>
+        <figure class="grid-gallery__item grid-gallery__sunset">
+          <img class="grid-gallery__img" src="./images/sunset.png" alt="Заходящее солнце">
+        </figure>
+        <figure class="grid-gallery__item grid-gallery__ice-cream">
+          <img class="grid-gallery__img" src="./images/ice-cream.png" alt="Мороженое">
+        </figure>
+        <figure class="grid-gallery__item grid-gallery__books">
+          <img class="grid-gallery__img" src="./images/books.png" alt="Книги">
+        </figure>
+        <figure class="grid-gallery__item grid-gallery__tape">
+          <img class="grid-gallery__img" src="./images/tape.png" alt="Аудиокассета для магнитофона">
+        </figure>
+        <figure class="grid-gallery__item grid-gallery__street">
+          <img class="grid-gallery__img" src="./images/street.png" alt="Улица">
+        </figure>
       </section>
     </main>
     <script src="./scripts/script.js"></script>
