доделал верстку десктопа и написал переменные

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             Многозадачность
           </p>
           <p class="card__text">
-            Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+            Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="card__link" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
           </p>
         </article>
         <article class="card why-hard-concentrate__card">
@@ -104,7 +104,7 @@
           5 простых (на самом деле не очень) советов
         </p>
         <article class="card how-concentrate__card">
-          <p class="card__title title-decor">
+          <p class="card__title title-decor low-font-weight">
             Представьте небо и облака
           </p>
           <p class="card__text">
@@ -112,7 +112,7 @@
           </p>
         </article>
         <article class="card how-concentrate__card">
-          <p class="card__title title-decor">
+          <p class="card__title title-decor low-font-weight">
             Включите музыку
           </p>
           <p class="card__text">
@@ -120,15 +120,15 @@
           </p>
         </article>
         <article class="card how-concentrate__card">
-          <p class="card__title title-decor">
+          <p class="card__title title-decor low-font-weight">
             Прогуляйтесь
           </p>
           <p class="card__text">
-            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="card__link" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
         </article>
         <article class="card how-concentrate__card">
-          <p class="card__title title-decor">
+          <p class="card__title title-decor low-font-weight">
             Хорошо ешьте
           </p>
           <p class="card__text">
@@ -136,7 +136,7 @@
           </p>
         </article>
         <article class="card how-concentrate__card">
-          <p class="card__title title-decor">
+          <p class="card__title title-decor low-font-weight">
             Читайте
           </p>
           <p class="card__text">
@@ -165,6 +165,11 @@
         </figure>
       </section>
     </main>
+    <footer class="footer">
+      <h3 class="footer__title">
+        focus
+      </h3>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
