начал заменять переменные для темной и светлой тем

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="color-scheme" content="dark light">
     <title>Сложно сосредоточиться</title>
     <link rel="icon" href="./images/favicon.ico">
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
-    <link rel="stylesheet" href="./fonts/fonts.css">
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -149,19 +149,19 @@
           А можно в картинках?
         </p>
         <figure class="grid-gallery__item grid-gallery__sunset">
-          <img class="grid-gallery__img" src="./images/sunset.png" alt="Заходящее солнце">
+          <img class="grid-gallery__img" src="./images/sunset.png" alt="Заходящее солнце" loading="lazy">
         </figure>
         <figure class="grid-gallery__item grid-gallery__ice-cream">
-          <img class="grid-gallery__img" src="./images/ice-cream.png" alt="Мороженое">
+          <img class="grid-gallery__img" src="./images/ice-cream.png" alt="Мороженое" loading="lazy">
         </figure>
         <figure class="grid-gallery__item grid-gallery__books">
-          <img class="grid-gallery__img" src="./images/books.png" alt="Книги">
+          <img class="grid-gallery__img" src="./images/books.png" alt="Книги" loading="lazy">
         </figure>
         <figure class="grid-gallery__item grid-gallery__tape">
-          <img class="grid-gallery__img" src="./images/tape.png" alt="Аудиокассета для магнитофона">
+          <img class="grid-gallery__img" src="./images/tape.png" alt="Аудиокассета для магнитофона" loading="lazy">
         </figure>
         <figure class="grid-gallery__item grid-gallery__street">
-          <img class="grid-gallery__img" src="./images/street.png" alt="Улица">
+          <img class="grid-gallery__img" src="./images/street.png" alt="Улица" loading="lazy">
         </figure>
       </section>
     </main>
