--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button
               class="header__theme-menu-button header__theme-menu-button_type_light"
             >
-              День
+              день
             </button>
           </li>
           <li class="header__theme-menu-item">
@@ -30,14 +30,14 @@
               class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
               disabled
             >
-              Авто
+              авто
             </button>
           </li>
           <li class="header__theme-menu-item">
             <button
               class="header__theme-menu-button header__theme-menu-button_type_dark"
             >
-              Неон
+              неон
             </button>
           </li>
         </ul>
@@ -100,54 +100,54 @@
         <h2 class="how-concentrate__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
-        <p class="card__title title-decor subtitle">
+        <h3 class="card__title title-decor subtitle">
           5 простых (на самом деле не очень) советов
-        </p>
+        </h3>
         <article class="card how-concentrate__card">
-          <h3 class="card__title title-decor low-font-weight">
+          <h4 class="card__title title-decor low-font-weight">
             Представьте небо и облака
-          </h3>
+          </h4>
           <p class="card__text">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
           </p>
         </article>
         <article class="card how-concentrate__card">
-          <h3 class="card__title title-decor low-font-weight">
+          <h4 class="card__title title-decor low-font-weight">
             Включите музыку
-          </h3>
+          </h4>
           <p class="card__text">
             Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
           </p>
         </article>
         <article class="card how-concentrate__card">
-          <h3 class="card__title title-decor low-font-weight">
+          <h4 class="card__title title-decor low-font-weight">
             Прогуляйтесь
-          </h3>
+          </h4>
           <p class="card__text">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="card__link" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
         </article>
         <article class="card how-concentrate__card">
-          <h3 class="card__title title-decor low-font-weight">
+          <h4 class="card__title title-decor low-font-weight">
             Хорошо ешьте
-          </h3>
+          </h4>
           <p class="card__text">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
         </article>
         <article class="card how-concentrate__card">
-          <h3 class="card__title title-decor low-font-weight">
+          <h4 class="card__title title-decor low-font-weight">
             Читайте
-          </h3>
+          </h4>
           <p class="card__text">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
           </p>
         </article>
       </section>
       <section class="content__section grid-gallery">
-        <h3 class="card__title title-decor grid-gallery__subtitle">
+        <h2 class="card__title title-decor grid-gallery__subtitle">
           А можно в картинках?
-        </h3>
+        </h2>
         <figure class="grid-gallery__item grid-gallery__sunset">
           <img class="grid-gallery__img" src="./images/sunset.png" alt="Заходящее солнце" loading="lazy">
         </figure>
@@ -166,9 +166,9 @@
       </section>
     </main>
     <footer class="footer">
-      <h3 class="footer__title">
+      <h2 class="footer__title">
         focus
-      </h3>
+      </h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
