исправил ошибки в dark and light

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </section>
       <section class="content__section fall-concentrate">
         <h2 class="fall-concentrate__title">
-          Что снижает концентрацию внимания?
+          Что снижает концентрацию<br>внимания?
         </h2>
         <article class="card">
           <h3 class="card__title title-decor">
